--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             width: 100% !important;
             background-color: rgba(255, 255, 255, 0.95) !important;
             border: 2px solid #d4af37 !important;
-            color: #0a1128 !important;
+            color: #fff !important;
             padding: 14px !important;
             border-radius: 8px !important;
             font-family: 'Lato', sans-serif !important;
