--- a/index.html
+++ b/index.html
@@ -327,19 +327,20 @@
             </p>
         </div>
 
-        <!-- Invitation Video Placeholder -->
-        <div class="relative w-full aspect-video bg-gradient-to-br from-navy to-blue rounded-xl gold-border overflow-hidden shadow-2xl mb-16 group cursor-pointer">
-            <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-black opacity-60"></div>
+        <!-- Invitation Video -->
+        <div class="relative w-full mb-16 rounded-xl gold-border overflow-hidden shadow-2xl" style="background: #000;">
+            <video 
+                width="100%" 
+                height="auto" 
+                controls 
+                style="display: block; width: 100%; height: auto;"
+                poster="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1920 1080'%3E%3Crect fill='%23000' width='1920' height='1080'/%3E%3C/svg%3E">
+                <source src="Video_Remix_Motown_Awards_Show.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
             
-            <!-- Play Button -->
-            <div class="absolute inset-0 flex items-center justify-center">
-                <div class="w-20 h-20 bg-gold rounded-full flex items-center justify-center pl-2 group-hover:scale-110 transition-transform duration-300 shadow-lg">
-                    <i class="fas fa-play text-navy-deep text-3xl"></i>
-                </div>
-            </div>
-
-            <!-- Video Text Overlay -->
-            <div class="absolute bottom-0 left-0 w-full p-8 text-center md:text-left">
+            <!-- Video Title Overlay -->
+            <div class="absolute bottom-0 left-0 w-full p-8 text-center md:text-left bg-gradient-to-t from-black to-transparent">
                 <h3 class="text-2xl md:text-3xl font-serif text-gold mb-2 font-bold">The Invitation</h3>
                 <p class="text-slate-200 font-sans text-sm md:text-base">"More connection. More support. More impact."</p>
             </div>
