--- a/index.html
+++ b/index.html
@@ -332,10 +332,12 @@
             <video 
                 width="100%" 
                 height="auto" 
-                controls 
+                autoplay
+                loop
+                muted
                 style="display: block; width: 100%; height: auto;"
                 poster="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1920 1080'%3E%3Crect fill='%23000' width='1920' height='1080'/%3E%3C/svg%3E">
-                <source src="Video_Remix_Motown_Awards_Show.mp4" type="video/mp4">
+                <source src="Cable_car_crooner_20251201649.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             
