Remove black frame/border and gold border from video container

--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
         </div>
 
         <!-- Invitation Video -->
-        <div class="relative w-full mb-12 md:mb-20 rounded-none md:rounded-2xl overflow-hidden shadow-2xl mx-auto" data-aos="fade-up" data-aos-delay="200" style="background: #000; box-shadow: 0 20px 60px rgba(212, 175, 55, 0.3); max-width: 100%;">
-            <div class="md:max-w-4xl md:mx-auto md:gold-border md:rounded-2xl overflow-hidden">
+        <div class="relative w-full mb-12 md:mb-20 overflow-hidden mx-auto" data-aos="fade-up" data-aos-delay="200">
+            <div class="md:max-w-4xl md:mx-auto overflow-hidden">
             <video 
                 width="100%" 
                 height="auto" 
@@ -493,18 +493,12 @@
                 <source src="Cable_car_crooner_202512011649.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            </div>
             
-            <!-- Video Title Overlay - Desktop Only -->
-            <div class="hidden md:block absolute bottom-0 left-0 w-full p-6 md:p-10 text-center md:text-left bg-gradient-to-t from-black via-black/80 to-transparent">
-                <h3 class="text-2xl md:text-4xl font-serif text-gold mb-2 md:mb-3 font-bold">Teamwork makes dreams work!</h3>
+            <!-- Text Below Video for All Devices -->
+            <div class="text-center px-4 py-6 md:py-8 bg-navy-deep md:max-w-4xl md:mx-auto">
+                <h3 class="text-xl md:text-3xl font-serif text-gold mb-2 md:mb-3 font-bold">Teamwork makes dreams work!</h3>
                 <p class="text-slate-200 font-sans text-sm md:text-lg">"More connection. More support. More impact."</p>
-            </div>
-            </div>
-            
-            <!-- Mobile Text Below Video -->
-            <div class="md:hidden text-center px-4 py-6 bg-navy-deep">
-                <h3 class="text-xl font-serif text-gold mb-2 font-bold">Teamwork makes dreams work!</h3>
-                <p class="text-slate-200 font-sans text-sm">"More connection. More support. More impact."</p>
             </div>
         </div>
 
