--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KIC x 211: When Resources Align | RSVP</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Lato:wght@300;400;700&family=Zilla+Slab:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <!-- HubSpot Form Script -->
@@ -25,7 +27,7 @@
                         'gold-light': '#f3e5ab',
                     },
                     fontFamily: {
-                        'serif': ['"Playfair Display"', 'serif'],
+                        'serif': ['"Limelight"', 'sans-serif'],
                         'sans': ['"Lato"', 'sans-serif'],
                     }
                 }
@@ -465,15 +467,15 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-10 w-full text-center">
                     <div class="flex flex-col items-center">
                         <p class="text-gold uppercase tracking-widest text-xs md:text-sm font-semibold mb-2">Date</p>
-                        <p class="text-xl md:text-4xl font-bold text-white" style="font-family: 'Zilla Slab', serif;">Thurs, Feb 12, 2026</p>
+                        <p class="text-xl md:text-4xl font-serif font-bold text-white">Thurs, Feb 12, 2026</p>
                     </div>
                     <div class="flex flex-col items-center">
                         <p class="text-gold uppercase tracking-widest text-xs md:text-sm font-semibold mb-2">Time</p>
-                        <p class="text-xl md:text-4xl font-bold text-white" style="font-family: 'Zilla Slab', serif;">10:00 – 11:00 AM PST</p>
+                        <p class="text-xl md:text-4xl font-serif font-bold text-white">10:00 – 11:00 AM PST</p>
                     </div>
                     <div class="flex flex-col items-center">
                         <p class="text-gold uppercase tracking-widest text-xs md:text-sm font-semibold mb-2">Where</p>
-                        <a href="#rsvp" class="text-xl md:text-4xl font-bold text-gold-light underline decoration-2 hover:text-white transition-all duration-300" style="font-family: 'Zilla Slab', serif;">Via Zoom</a>
+                        <a href="#rsvp" class="text-xl md:text-4xl font-serif font-bold text-gold-light underline decoration-2 hover:text-white transition-all duration-300">Via Zoom</a>
                     </div>
                 </div>
             </div>
@@ -522,7 +524,9 @@
         <!-- Mascots Red Carpet Gallery Section -->
         <div class="mb-16 md:mb-24" data-aos="fade-up" data-aos-delay="400">
             <div class="text-center mb-10 md:mb-16 px-4">
-                <h3 class="text-3xl md:text-7xl font-serif text-gold mb-3 md:mb-6 font-bold">🎬 Presenting The 211 All-Stars 🎬</h3>
+                <h3 class="text-2xl md:text-7xl font-serif text-gold mb-3 md:mb-6 font-bold leading-tight">
+                    <span class="whitespace-nowrap">🎬 Presenting The 211 All-Stars 🎬</span>
+                </h3>
                 <p class="text-slate-200 text-base md:text-2xl max-w-3xl mx-auto">Scroll to discover the legendary faces representing California's 211 network</p>
             </div>
             
