Fix horizontal overflow and add audio play hint

--- a/index.html
+++ b/index.html
@@ -461,6 +461,10 @@
         html {
             scroll-behavior: smooth;
         }
+
+        body {
+            overflow-x: hidden;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -541,6 +545,7 @@
                     <div class="text-center md:text-left md:flex-1">
                         <p class="text-gold font-semibold text-xs md:text-base uppercase tracking-wide mb-1 md:mb-2">Now Playing</p>
                         <p class="text-white font-serif text-sm md:text-lg">KIC and 211: Help and Hope</p>
+                        <p class="text-slate-400 text-xs mt-1">(Click ▶️ to play)</p>
                     </div>
                     <audio id="motownAudio" class="w-full md:flex-1 mt-3 md:mt-0" controls autoplay>
                         <source src="KIC and 211_ Help and Hope.mp3" type="audio/mpeg">
