Add testimonial section, update video text, song title, and gallery heading with stats

--- a/index.html
+++ b/index.html
@@ -563,6 +563,24 @@
             </div>
         </div>
 
+        <!-- TESTIMONIAL SECTION -->
+        <div class="max-w-4xl mx-auto mb-16 md:mb-24 px-4 md:px-0" data-aos="fade-up" data-aos-delay="150">
+            <div class="relative p-8 md:p-12 rounded-2xl border-2 border-gold bg-gradient-to-r from-gold/5 to-transparent">
+                <div class="absolute -top-6 left-1/2 transform -translate-x-1/2">
+                    <span class="text-5xl text-gold/30">"</span>
+                </div>
+                <div class="text-center">
+                    <p class="text-xl md:text-3xl font-serif text-white font-bold italic mb-6 leading-relaxed">
+                        I truly feel like this is one of the most important things I've had the opportunity to work on in my entire career.
+                    </p>
+                    <div class="flex flex-col items-center gap-2">
+                        <p class="text-lg font-serif text-gold font-bold">Tonia Hagaman</p>
+                        <p class="text-sm md:text-base text-slate-300">Chief, Community & Statewide Interventions<br/>CA Dept of Public Health</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Invitation Video -->
         <div class="relative w-full mb-12 md:mb-20 overflow-hidden mx-auto" data-aos="fade-up" data-aos-delay="200">
             <div class="md:max-w-4xl md:mx-auto overflow-hidden">
@@ -581,7 +599,7 @@
             
             <!-- Text Below Video for All Devices -->
             <div class="text-center px-4 py-6 md:py-8 bg-navy-deep md:max-w-4xl md:mx-auto">
-                <h3 class="text-xl md:text-3xl font-serif text-gold mb-2 md:mb-3 font-bold">Teamwork makes dreams work!</h3>
+                <h3 class="text-xl md:text-3xl font-serif text-gold mb-2 md:mb-3 font-bold">Thank You 211 for Serving California</h3>
                 <p class="text-slate-200 font-sans text-sm md:text-lg">"More connection. More support. More impact."</p>
             </div>
         </div>
@@ -593,7 +611,7 @@
                     <div class="vinyl-record w-12 h-12 md:w-16 md:h-16 flex-shrink-0"></div>
                     <div class="text-center md:text-left md:flex-1">
                         <p class="text-gold font-semibold text-xs md:text-base uppercase tracking-wide mb-1 md:mb-2">Now Playing</p>
-                        <p class="text-white font-serif text-sm md:text-lg">KIC and 211: Help and Hope</p>
+                        <p class="text-white font-serif text-sm md:text-lg">211 and KIC Help and Hope</p>
                         <p class="text-slate-400 text-xs mt-1">(Click ▶️ to play)</p>
                     </div>
                     <audio id="motownAudio" class="w-full md:flex-1 mt-3 md:mt-0" controls autoplay>
@@ -608,9 +626,10 @@
         <div class="mb-16 md:mb-24" data-aos="fade-up" data-aos-delay="400">
             <div class="text-center mb-10 md:mb-16 px-4">
                 <h3 class="text-2xl sm:text-3xl md:text-7xl font-serif text-gold mb-3 md:mb-6 font-bold leading-tight mx-auto">
-                    🎬 Presenting The 211 All-Stars 🎬
+                    🎬 Celebrating The 211 All-Stars 🎬
                 </h3>
-                <p class="text-slate-200 text-base md:text-2xl max-w-3xl mx-auto">Scroll to discover the legendary faces representing California's 211 network</p>
+                <p class="text-slate-200 text-base md:text-xl max-w-3xl mx-auto mb-3">13 Call Centers + Hundreds of Dedicated 211 Staff = Healthier Communities</p>
+                <p class="text-slate-300 text-sm md:text-lg max-w-3xl mx-auto">Scroll to discover the legendary faces representing California's 211 network</p>
             </div>
             
             <div class="gallery-container">
