Polish refinements: remove scroll hint, increase audio to 25%, remove testimonial border, remove agenda bullets

--- a/index.html
+++ b/index.html
@@ -527,17 +527,14 @@
                     <h2 class="text-2xl md:text-3xl font-serif text-gold mb-4 font-bold">✦ AGENDA ✦</h2>
                     <div class="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 text-slate-200">
                         <div class="flex items-center gap-2">
-                            <span class="text-gold font-bold text-lg">•</span>
                             <span class="text-base md:text-lg font-medium">5-Year Project Outcomes</span>
                         </div>
                         <div class="hidden md:block w-1 h-6 bg-gold/30"></div>
                         <div class="flex items-center gap-2">
-                            <span class="text-gold font-bold text-lg">•</span>
                             <span class="text-base md:text-lg font-medium">211 Center Awards</span>
                         </div>
                         <div class="hidden md:block w-1 h-6 bg-gold/30"></div>
                         <div class="flex items-center gap-2">
-                            <span class="text-gold font-bold text-lg">•</span>
                             <span class="text-base md:text-lg font-medium">Looking Ahead</span>
                         </div>
                     </div>
@@ -593,7 +590,6 @@
                     🎬 Celebrating The 211 All-Stars 🎬
                 </h3>
                 <p class="text-slate-200 text-base md:text-xl max-w-3xl mx-auto mb-3">13 Call Centers + Hundreds of Dedicated 211 Staff = Healthier Communities</p>
-                <p class="text-slate-300 text-sm md:text-lg max-w-3xl mx-auto">Scroll to discover the legendary faces representing California's 211 network</p>
             </div>
             
             <div class="gallery-container">
@@ -1105,7 +1101,7 @@
 
         <!-- TESTIMONIAL SECTION -->
         <div class="max-w-4xl mx-auto mb-16 md:mb-24 px-4 md:px-0" data-aos="fade-up" data-aos-delay="150">
-            <div class="relative p-8 md:p-12 rounded-2xl border-2 border-gold bg-gradient-to-r from-gold/5 to-transparent">
+            <div class="relative p-8 md:p-12 rounded-2xl bg-gradient-to-r from-gold/5 to-transparent">
                 <div class="absolute -top-6 left-1/2 transform -translate-x-1/2">
                     <span class="text-5xl text-gold/30">"</span>
                 </div>
@@ -1174,11 +1170,11 @@
             'Butte/Glenn': 'The Chico Bridge Builder'
         };
 
-        // Set audio volume to 10% and attempt autoplay
+        // Set audio volume to 25% and attempt autoplay
         document.addEventListener('DOMContentLoaded', function() {
             var audio = document.getElementById('motownAudio');
             if (audio) {
-                audio.volume = 0.1; // 10% volume
+                audio.volume = 0.25; // 25% volume
                 
                 // Try to play the audio
                 var playPromise = audio.play();
