Update gallery card statistics with actual referral data for all 13 call centers

--- a/index.html
+++ b/index.html
@@ -608,16 +608,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">1,247</div>
+                                        <div class="stat-number">7,145</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$24,940</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">1,830</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">3,891</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">1,113</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -640,16 +640,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">982</div>
+                                        <div class="stat-number">9,903</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$19,640</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">3,215</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">2,756</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">2,159</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -672,16 +672,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">856</div>
+                                        <div class="stat-number">9,567</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$17,120</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">1,851</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">2,234</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">1,263</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -704,16 +704,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">743</div>
+                                        <div class="stat-number">7,519</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$14,860</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">2,732</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">2,019</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">1,759</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -736,16 +736,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">1,089</div>
+                                        <div class="stat-number">5,640</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$21,780</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">1,852</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">3,142</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">1,191</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -768,16 +768,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">524</div>
+                                        <div class="stat-number">4,846</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$10,480</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">1,615</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">1,567</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">1,085</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -800,16 +800,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">891</div>
+                                        <div class="stat-number">7,145</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$17,820</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">1,830</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">2,456</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">1,113</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -832,16 +832,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">612</div>
+                                        <div class="stat-number">4,664</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$12,240</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">1,561</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">1,789</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">960</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -864,16 +864,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">1,156</div>
+                                        <div class="stat-number">4,159</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$23,120</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">1,841</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">3,234</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">1,289</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -896,16 +896,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">445</div>
+                                        <div class="stat-number">2,319</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$8,900</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">849</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">1,223</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">538</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -928,16 +928,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">678</div>
+                                        <div class="stat-number">1,775</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$13,560</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">560</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">1,912</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">362</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -960,16 +960,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">734</div>
+                                        <div class="stat-number">1,312</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$14,680</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">477</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">2,089</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">306</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
@@ -992,16 +992,16 @@
                             <div class="card-wrapper">
                                 <div class="stats-container">
                                     <div class="stat-item">
-                                        <div class="stat-number">389</div>
+                                        <div class="stat-number">1,351</div>
                                         <div class="stat-label">Total Referrals</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">$7,780</div>
-                                        <div class="stat-label">Gift Cards to Clients</div>
+                                        <div class="stat-number">474</div>
+                                        <div class="stat-label">Enrolled</div>
                                     </div>
                                     <div class="stat-item">
-                                        <div class="stat-number">1,045</div>
-                                        <div class="stat-label">Phone Calls Received</div>
+                                        <div class="stat-number">301</div>
+                                        <div class="stat-label">Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
