--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                     <div class="vinyl-record w-12 h-12 md:w-16 md:h-16 flex-shrink-0"></div>
                     <div class="text-center md:text-left md:flex-1">
                         <p class="text-gold font-semibold text-xs md:text-base uppercase tracking-wide mb-1 md:mb-2">Now Playing</p>
-                        <p class="text-white font-serif text-sm md:text-lg">211 and KIC Help and Hope</p>
+                        <p class="text-white font-serif text-sm md:text-lg">211 and KIC: Help and Hope</p>
                         <p class="text-slate-400 text-xs mt-1">(Click ▶️ to play)</p>
                     </div>
                     <audio id="motownAudio" class="w-full md:flex-1 mt-3 md:mt-0" controls autoplay>
@@ -1023,7 +1023,7 @@
             <div id="form-container" class="relative z-10">
                 <div class="text-center mb-8">
                     <h2 class="text-4xl md:text-5xl font-serif text-gold mb-4 font-bold" style="text-shadow: 0 2px 20px rgba(212, 175, 55, 0.6);">✦ RSVP ✦</h2>
-                    <p class="text-slate-100 text-lg md:text-xl" style="text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);">Join us to celebrate 211 & Kick It California's shared success & future collaboration.</p>
+                    <p class="text-slate-100 text-lg md:text-xl" style="text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);">Join us to celebrate 211 & Kick It California's shared success.</p>
                 </div>
                 
                 <!-- Custom RSVP Form -->
